[package]
name = "flexible-hyper-server-tls"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Easily choose between HTTP or HTTPS when using hyper"
repository = "https://github.com/ravenclaw900/flexible-hyper-server-tls"
keywords = ["hyper", "tls", "http", "https", "rustls"]
categories = ["network-programming"]
exclude = ["examples/certs"]

[features]
default = ["rustls_helpers"]
rustls_helpers = ["dep:rustls-pemfile"]

[dependencies]
# Will figure out how to handle http1 vs. http2 later
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
rustls-pemfile = { version = "2.1.1", optional = true }
thiserror = "1.0.58"
tls-listener = { version = "0.10.0", features = ["rustls"] }
tokio = { version = "1.36.0", features = ["net"] }
tokio-rustls = "0.25.0"

[dev-dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["http1"] }
tokio = { version = "1.35.1", features = ["rt", "macros"] }
