[package]
name = "flexible-hyper-server-tls"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Easily choose between HTTP or HTTPS when using hyper"
repository = "https://github.com/ravenclaw900/flexible-hyper-server-tls"
keywords = ["hyper", "tls", "http", "https", "rustls"]
categories = ["network-programming"]
exclude = ["examples/certs"]

[features]
default = ["rustls_helpers", "aws_lc_rs", "tls12"]
rustls_helpers = ["tokio/fs"]
aws_lc_rs = ["tokio-rustls/aws_lc_rs"]
ring = ["tokio-rustls/ring"]
tls12 = ["tokio-rustls/tls12"]

[dependencies]
# Will figure out how to handle http1 vs. http2 later
hyper = { version = "1.5.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.9", features = ["tokio"] }
rustls-pki-types = "1.10.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["net", "rt"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
    "logging",
] }

[dev-dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["http1"] }
tokio = { version = "1.40.0", features = ["rt", "macros"] }
