[package]
name = "hello-world-https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexible-hyper-server-tls = { path = "../.." }
hyper = { version = "0.14.27", features = ["server", "http1", "http2"] }
tokio = { version = "1.29.1", features = ["full"] }
